Fix migration circular dependency and harden production configuration for Oracle VM

--- a/.env
+++ b/.env
@@ -1,59 +1,78 @@
-# PS IntelliHR - Environment Configuration
-# Copy this file to .env and configure for your environment
+# =============================================================================
+# DJANGO CORE
+# =============================================================================
+DEBUG=False
+SECRET_KEY=__ivmaG0TJER7hOSMP7nThknMcGEzT21XZB4QGKtWjM0V4Y2YJNwL-b5DHhIch9VPjw
+DJANGO_SETTINGS_MODULE=config.settings.production
+LOG_TARGET=console
 
 # =============================================================================
-# DJANGO SETTINGS
+# ALLOWED HOSTS & CORS
 # =============================================================================
-DEBUG=True
-# SECRET_KEY is required in production! Use 'python -c "import secrets; print(secrets.token_urlsafe(50))"' to generate one.
-SECRET_KEY=your-super-secret-key-change-in-production
-DJANGO_SETTINGS_MODULE=config.settings.development
-LOG_TARGET=console # Set to 'file' if not running in Docker
+ALLOWED_HOSTS=localhost,127.0.0.1,140.245.28.90,hrms.pankaj.im,.hrms.pankaj.im
+CORS_ALLOWED_ORIGINS=http://localhost:3000,https://hrms.pankaj.im
+CSRF_TRUSTED_ORIGINS=http://140.245.28.90:8000,http://localhost:8000,https://hrms.pankaj.im
 
 # =============================================================================
-# DATABASE
+# DATABASE (PostgreSQL)
 # =============================================================================
 POSTGRES_DB=ps_intellihr
 POSTGRES_USER=hrms_admin
-POSTGRES_PASSWORD=password
-DATABASE_HOST=localhost
+POSTGRES_PASSWORD=ePzElecW6ynNf!Avhu0BZ@1SIU*qboVa
+DATABASE_HOST=db
 DATABASE_PORT=5432
 
 # =============================================================================
 # REDIS & CELERY
 # =============================================================================
-REDIS_URL=redis://localhost:6379/0
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
+REDIS_URL=redis://redis:6379/0
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/2
+CELERY_ACCEPT_CONTENT=json
+CELERY_TASK_SERIALIZER=json
+CELERY_RESULT_SERIALIZER=json
+CELERY_TIMEZONE=Asia/Kolkata
 
 # =============================================================================
-# SECURITY
+# SECURITY & ENCRYPTION
 # =============================================================================
-ALLOWED_HOSTS=localhost,127.0.0.1,.example.com
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-# Field-level encryption key (32 bytes base64)
-FIELD_ENCRYPTION_KEY=gvzPBJb7WHy_HzVU0XUD_-hmJ9b9JjX9heqeizdIJ6g=
+ENCRYPTION_KEY=YGx7zxnrr8SuS9UFbSLNzLtAjjdzHXeh0sowc3O7NhM=
+FIELD_ENCRYPTION_KEY=YGx7zxnrr8SuS9UFbSLNzLtAjjdzHXeh0sowc3O7NhM=
+SECURE_SSL_REDIRECT=False
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
 
 # =============================================================================
-# JWT SETTINGS
+# JWT AUTH
 # =============================================================================
 JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
 JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
-JWT_SIGNING_KEY=your-jwt-signing-key
+JWT_SIGNING_KEY=CHANGE_THIS_JWT_KEY
 
 # =============================================================================
-# EMAIL (SMTP)
+# EMAIL (SMTP – VERIFIED CONFIG)
 # =============================================================================
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=True
-EMAIL_HOST_USER=noreply@example.com
-EMAIL_HOST_PASSWORD=your-email-password
-DEFAULT_FROM_EMAIL=PS IntelliHR <noreply@example.com>
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=mail.pankaj.im
+EMAIL_PORT=465
+EMAIL_USE_SSL=True
+EMAIL_USE_TLS=False
+
+EMAIL_HOST_USER=noreply@pankaj.im
+EMAIL_HOST_PASSWORD=Mani@192
+
+DEFAULT_FROM_EMAIL=PS IntelliHR <noreply@pankaj.im>
+SERVER_EMAIL=noreply@pankaj.im
 
 # =============================================================================
-# AWS S3 (Optional - for file storage)
+# FILE UPLOADS
+# =============================================================================
+MEDIA_ROOT=/app/media
+MEDIA_URL=/media/
+STATIC_ROOT=/app/staticfiles
+
+# =============================================================================
+# AWS S3 (OPTIONAL – DISABLED)
 # =============================================================================
 USE_S3=False
 AWS_ACCESS_KEY_ID=
@@ -66,6 +85,7 @@ AWS_S3_REGION_NAME=ap-south-1
 # =============================================================================
 OPENAI_API_KEY=
 GOOGLE_AI_API_KEY=
+
 AI_RESUME_PARSING_ENABLED=True
 AI_ATTRITION_PREDICTION_ENABLED=True
 AI_CHATBOT_ENABLED=True
@@ -75,14 +95,16 @@ AI_CHATBOT_ENABLED=True
 # =============================================================================
 SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
+
 TEAMS_APP_ID=
 TEAMS_APP_SECRET=
+
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 
 # =============================================================================
-# MONITORING (Production)
+# MONITORING
 # =============================================================================
 SENTRY_DSN=
 PROMETHEUS_METRICS_ENABLED=False
