--- a/.env
+++ b/.env
@@ -59,7 +59,7 @@ EMAIL_USE_SSL=True
 EMAIL_USE_TLS=False
 
 EMAIL_HOST_USER=noreply@pankaj.im
-EMAIL_HOST_PASSWORD=Mani@192
+EMAIL_HOST_PASSWORD=*******
 
 DEFAULT_FROM_EMAIL=PS IntelliHR <noreply@pankaj.im>
 SERVER_EMAIL=noreply@pankaj.im
