Harden DRF throttling, optimize report performance, and add resilient OpenAPI runner

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,26 @@ JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
 JWT_SIGNING_KEY=your-jwt-signing-key
 
 # =============================================================================
+# API THROTTLING
+# =============================================================================
+REDIS_CACHE_URL=redis://localhost:6379/4
+DEV_DISABLE_THROTTLING=False
+ENABLE_TEST_THROTTLING=False
+ENABLE_API_DOCS=False
+THROTTLE_ANON_RATE=120/hour
+THROTTLE_USER_RATE=3000/hour
+THROTTLE_BURST_RATE=180/minute
+THROTTLE_SUSTAINED_RATE=50000/day
+THROTTLE_ORGANIZATION_RATE=200000/hour
+THROTTLE_ORG_USER_RATE=30000/hour
+THROTTLE_LOGIN_RATE=10/minute
+THROTTLE_PASSWORD_RESET_RATE=8/hour
+THROTTLE_TWO_FACTOR_RATE=30/hour
+THROTTLE_ATTENDANCE_PUNCH_RATE=60/minute
+THROTTLE_REPORT_EXPORT_RATE=30/hour
+THROTTLE_API_KEY_RATE=10000/hour
+
+# =============================================================================
 # EMAIL (SMTP)
 # =============================================================================
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
